--- a/index.html
+++ b/index.html
@@ -1,64 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Todo App</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
-  </head>
-  <body>
-    <header class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Elsenhower matrix" />
-      <a
-        class="more_inf"
-        href="https://goal-life.com/page/method/matrix-eisenhower"
-        >Want more details?</a
-      >
-    </header>
-    <main class="centered-main-page-element">
-      <h3>Add Item</h3>
-      <section id="topsectionforaddingelementtolist">
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text" />
-          <button>Add</button>
-        </div>
-      </section>
-      <h3>Todo</h3>
-      <ul id="incompletetasks">
-        <li>
-          <input type="checkbox" />
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete button" />
-          </button>
-        </li>
-        <li class="editMode">
-          <input type="checkbox" />
-          <label class="task">Go Shopping</label>
-          <input type="text" value="go shopping" class="task" />
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete button" />
-          </button>
-        </li>
+<head>
+ <title>Todo App</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
+</head>
+<body class="wrapper">
+  <header class="header">
+    <img src="./eisenhower-matrix.jpg" class="header__image" alt="Elsenhower matrix"/>
+    <a class="header__info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  </header>
+  <main class="main">
+    <h3 class="main__title">Add Item</h3>
+    <section class="main__wrapper">
+        <input type="text" id="new-task" class="main__new-task" />
+        <button class="main__new-task-button">Add</button>
+    </section>
+    <h3 class="main__title">Todo</h3>
+    <ul id="incompleted-tasks" class="main__list">
+      <li class="main__link link">
+        <input type="checkbox" class="link__checkbox" />
+        <label class="link__task">Pay Bills</label>
+        <input type="text" class="link__task-input" />
+        <button class="list__edit-button">Edit</button>
+        <button class="link__delete-button">
+        <img src="./remove.svg" class="link__delete-image" alt="delete button"/></button>
+      </li>
+      <li class="main__link link edit-mode">
+        <input type="checkbox" class="link__checkbox" />
+        <label class="link__task link__task-label_edit">Go Shopping</label>
+        <input type="text" value="go shopping" class="link__task-input link__task-input_edit"/>
+        <button class="list__edit-button">Save</button>
+        <button class="link__delete-button">
+        <img src="./remove.svg" class="link__delete-image" alt="delete button"/></button>
+      </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked />
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task" />
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="delete button" />
-          </button>
-        </li>
+    <h3 class="main__title">Completed</h3>
+    <ul id="completed-tasks" class="main__list">
+      <li class="main__link link">
+        <input type="checkbox" class="link__checkbox" checked />
+        <label class="link__task link__task-label_completed">See the Doctor</label>
+        <input type="text" class="link__task-input" />
+        <button class="list__edit-button">Edit</button>
+        <button class="link__delete-button">
+        <img src="./remove.svg" class="link__delete-image" alt="delete button"/></button>
+      </li>
       </ul>
-    </main>
-    <script src="app.js"></script>
-  </body>
+  </main>
+  <script src="app.js"></script>
+</body>
 </html>
