--- a/index.html
+++ b/index.html
@@ -1,84 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Todo App</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
-  </head>
-  <body class="wrapper">
-    <header class="header">
-      <img
-        src="./eisenhower-matrix.jpg"
-        class="header__image"
-        alt="Elsenhower matrix"
-      />
-      <a
-        class="header__info-link"
-        href="https://goal-life.com/page/method/matrix-eisenhower"
-        >Want more details?</a
-      >
-    </header>
-    <main class="main">
-      <h3 class="main__title">Add Item</h3>
-      <section class="main__wrapper">
+<head>
+ <title>Todo App</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"/>
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8" />
+</head>
+<body class="wrapper">
+  <header class="header">
+    <img src="./eisenhower-matrix.jpg" class="header__image" alt="Elsenhower matrix"/>
+    <a class="header__info-link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  </header>
+  <main class="main">
+    <h3 class="main__title">Add Item</h3>
+    <section class="main__wrapper">
         <input type="text" id="new-task" class="main__new-task" />
         <button class="main__new-task-button">Add</button>
-      </section>
-      <h3 class="main__title">Todo</h3>
-      <ul id="incompleted-tasks" class="main__list">
-        <li class="main__link link">
-          <input type="checkbox" class="link__checkbox" />
-          <label class="link__task">Pay Bills</label>
-          <input type="text" class="link__task-input" />
-          <button class="list__edit-button">Edit</button>
-          <button class="link__delete-button">
-            <img
-              src="./remove.svg"
-              class="link__delete-image"
-              alt="delete button"
-            />
-          </button>
-        </li>
-        <li class="main__link link edit-mode">
-          <input type="checkbox" class="link__checkbox" />
-          <label class="link__task link__task-label_edit">Go Shopping</label>
-          <input
-            type="text"
-            value="go shopping"
-            class="link__task-input link__task-input_edit"
-          />
-          <button class="list__edit-button">Save</button>
-          <button class="link__delete-button">
-            <img
-              src="./remove.svg"
-              class="link__delete-image"
-              alt="delete button"
-            />
-          </button>
-        </li>
-      </ul>
-      <h3 class="main__title">Completed</h3>
-      <ul id="completed-tasks" class="main__list">
-        <li class="main__link link">
-          <input type="checkbox" class="link__checkbox" checked />
-          <label class="link__task link__task-label_completed"
-            >See the Doctor</label
-          >
-          <input type="text" class="link__task-input" />
-          <button class="list__edit-button">Edit</button>
-          <button class="link__delete-button">
-            <img
-              src="./remove.svg"
-              class="link__delete-image"
-              alt="delete button"
-            />
-          </button>
-        </li>
-      </ul>
-    </main>
-    <script src="app.js"></script>
-  </body>
+    </section>
+    <h3 class="main__title">Todo</h3>
+    <ul id="incompleted-tasks" class="main__list">
+      <li class="main__link link">
+        <input type="checkbox" class="link__checkbox" />
+        <label class="link__task">Pay Bills</label>
+        <input type="text" class="link__task-input" />
+        <button class="list__edit-button">Edit</button>
+        <button class="link__delete-button">
+        <img src="./remove.svg" class="link__delete-image" alt="delete button"/></button>
+      </li>
+      <li class="main__link link edit-mode">
+        <input type="checkbox" class="link__checkbox" />
+        <label class="link__task link__task-label_edit">Go Shopping</label>
+        <input type="text" value="go shopping" class="link__task-input link__task-input_edit"/>
+        <button class="list__edit-button">Save</button>
+        <button class="link__delete-button">
+        <img src="./remove.svg" class="link__delete-image" alt="delete button"/></button>
+      </li>
+    </ul>
+    <h3 class="main__title">Completed</h3>
+    <ul id="completed-tasks" class="main__list">
+      <li class="main__link link">
+        <input type="checkbox" class="link__checkbox" checked />
+        <label class="link__task link__task-label_completed">See the Doctor</label>
+        <input type="text" class="link__task-input" />
+        <button class="list__edit-button">Edit</button>
+        <button class="link__delete-button">
+        <img src="./remove.svg" class="link__delete-image" alt="delete button"/></button>
+      </li>
+    </ul>
+  </main>
+  <script src="app.js"></script>
+</body>
 </html>
